@@ -1,2 +1,4 @@
 ((magit-commit
-  (t . 5)))
+  (t . 5))
+ (magit-pull
+  (transient:magit-pull:--autostash . 1)))
